link da vaquinha nos buttons DOE AGORA

--- a/fundacaomacedo/index.html
+++ b/fundacaomacedo/index.html
@@ -407,7 +407,7 @@
 
                                 <div class="col-sm-12 clearfix">
                                     <a class="btn btn-pure-dark-bg" href="#">Veja Detalhes</a>
-                                    <a class="btn btn-theme pull-right" href="#">Doe Agora</a>
+                                    <a class="btn btn-theme pull-right" href="https://www.vakinha.com.br/vaquinha/sos-fundacao-macedo">Doe Agora</a>
                                 </div>
                             </div>
 
@@ -470,7 +470,7 @@
                                 </p>
 
                                 <div class="clearfix">
-                                    <a class="btn btn-theme text-uppercase" href="#">Doe Agora</a>
+                                    <a class="btn btn-theme text-uppercase" href="https://www.vakinha.com.br/vaquinha/sos-fundacao-macedo">Doe Agora</a>
                                 </div>
 
 
@@ -504,7 +504,7 @@
                                 </p>
 
                                 <div class="clearfix">
-                                    <a class="btn btn-theme text-uppercase" href="#">Doe Agora</a>
+                                    <a class="btn btn-theme text-uppercase" href="https://www.vakinha.com.br/vaquinha/sos-fundacao-macedo">Doe Agora</a>
                                 </div>
 
 
@@ -546,7 +546,7 @@
 
 
                                 <div class="clearfix">
-                                    <a class="btn btn-theme text-uppercase" href="#">Doe Agora</a>
+                                    <a class="btn btn-theme text-uppercase" href="https://www.vakinha.com.br/vaquinha/sos-fundacao-macedo">Doe Agora</a>
                                 </div>
 
                             </div> <!--fim. causa-conteúdo -->
