--- a/fundacaomacedo/causes.html
+++ b/fundacaomacedo/causes.html
@@ -109,7 +109,7 @@
                                             <div class="text">
                                                 <span class="head-heading">Nosso endereço</span>                                                
                                                 <span class="head-content">
-                                                    Rua Vereador Creudo Rodriguês da Silva <br> Centro, Toritama/PE
+                                                    Rua Vereador Creudo Rodriguês da Silva <br> Centro, Toritama/PE CEP: 55125-000
                                                 </span>
                                             </div>
                                         </div><!--fim.caixa de ícone de reparo reparo  -->
@@ -123,7 +123,7 @@
                                             <div class="text">
                                                 <span class="head-heading"> HORÁRIO DE ABERTURA</span>                                                
                                                 <span class="head-content">
-                                                    8h00 às 18h00
+                                                    08h00 às 18h00
                                                 </span>
                                             </div>
                                         </div><!-- fim .caixa de ícone de cabeçalho  -->
@@ -590,7 +590,7 @@
                                         <p>
                                             Rua Vereador Creudo Rodriguês da Silva
                                             <br>
-                                            Centro, Toritama/PE
+                                            Centro, Toritama/PE <br> CEP: 55125-000
                                         </p>   
                                     </div>
                                 </div>
