--- a/fundacaomacedo/fundador.html
+++ b/fundacaomacedo/fundador.html
@@ -111,7 +111,7 @@
                                         <div class="text">
                                             <span class="head-heading">Nosso Endereço</span>
                                             <span class="head-content">
-                                                CENTRO, TORITAMA/PE
+                                                Rua Vereador Creudo Rodriguês da Silva Centro, Toritama-PE CEP: 55125-000
                                             </span>
                                         </div>
                                     </div><!-- fim .caixa de ícone de reparo  -->
@@ -125,7 +125,7 @@
                                         <div class="text">
                                             <span class="head-heading"> HORÁRIO DE ABERTURA</span>
                                             <span class="head-content">
-                                                8h00 às 18h00
+                                                08h00 às 18h00
                                             </span>
                                         </div>
                                     </div><!-- fim .caixa de ícone de cabeçalho  -->
@@ -351,7 +351,7 @@
                      espécies de animais e enriquecer ainda mais a experiência das crianças que atende.</p>
      
                         
-                            <a class="btn btn-team-details" href="appointment.html">FALE COMIGO</a>  
+                            <a class="btn btn-team-details" href="https://api.whatsapp.com/send/?phone=5581992082735&text=Gleyson+Macedo&type=phone_number&app_absent=0">FALE COMIGO</a>  
 
                           </div>                                                  
 
@@ -561,7 +561,7 @@
                                     <p>
                                         Rua Vereador Creudo Rodriguês da Silva
                                         <br>
-                                        Centro, Toritama/PE
+                                        Centro, Toritama/PE <br> CEP: 55125-000
                                     </p>
                                 </div>
                             </div>
