--- a/fundacaomacedo/index.html
+++ b/fundacaomacedo/index.html
@@ -112,7 +112,7 @@
                                         <div class="text">
                                             <span class="head-heading">Nosso Endereço</span>
                                             <span class="head-content">
-                                                Rua Vereador Creudo Rodriguês da Silva <br> Centro, Toritama/PE
+                                                Rua Vereador Creudo Rodriguês da Silva <br> Centro, Toritama/PE CEP: 55125-000
                                             </span>
                                         </div>
                                     </div><!-- fim .caixa de ícone de reparo  -->
@@ -126,7 +126,7 @@
                                         <div class="text">
                                             <span class="head-heading"> HORÁRIO DE ABERTURA</span>
                                             <span class="head-content">
-                                                8h00 às 18h00
+                                                08h00 às 18h00
                                             </span>
                                         </div>
                                     </div><!-- fim .caixa de ícone de cabeçalho  -->
@@ -715,7 +715,7 @@
 
             <div class="row">
                 <div class="col-sm-12 col-md-4 col-md-offset-4 text-center">
-                    <a class="btn btn-load-more" href="#">- Carregar todos os projetos -</a>
+                    
                 </div>
             </div>
 
@@ -769,8 +769,8 @@
                             <div class="team-social-share text-center clearfix">
                                 <a href="#" title="Facebook"> <i class="fa fa-facebook rectangle"></i> </a>
                                 <a href="#" title="Facebook"> <i class="fa fa-twitter rectangle"></i> </a>
-                                <a href="#" title="Facebook"> <i class="fa fa-instagram rectangle"></i> </a>
-                                <a href="#" title="Facebook"> <i class="fa fa-linkedin rectangle"></i> </a>
+                                <a href="https://www.instagram.com/gleysonfmacedo/" title="Facebook"> <i class="fa fa-instagram rectangle"></i> </a>
+                                <a href="https://www.linkedin.com/in/gleyson-macedo-332b7a145/" title="Facebook"> <i class="fa fa-linkedin rectangle"></i> </a>
                             </div> <!-- fim .autor-caixa social  -->
 
                         </article>
@@ -798,7 +798,7 @@
                             <div class="team-social-share text-center clearfix">
                                 <a href="#" title="Facebook"> <i class="fa fa-facebook rectangle"></i> </a>
                                 <a href="#" title="Facebook"> <i class="fa fa-twitter rectangle"></i> </a>
-                                <a href="#" title="Facebook"> <i class="fa fa-instagram rectangle"></i> </a>
+                                <a href="https://www.instagram.com/judezani/" title="Facebook"> <i class="fa fa-instagram rectangle"></i> </a>
                                 <a href="#" title="Facebook"> <i class="fa fa-linkedin rectangle"></i> </a>
                             </div> <!-- fim .autor-caixa social -->
 
@@ -830,7 +830,7 @@
                                 <a href="#" title="Facebook"> <i class="fa fa-facebook rectangle"></i> </a>
                                 <a href="#" title="Facebook"> <i class="fa fa-twitter rectangle"></i> </a>
                                 <a href="#" title="Facebook"> <i class="fa fa-instagram rectangle"></i> </a>
-                                <a href="#" title="Facebook"> <i class="fa fa-linkedin rectangle"></i> </a>
+                                <a href=" https://www.linkedin.com/in/micael-lima-analista-de-dados/" title="Facebook"> <i class="fa fa-linkedin rectangle"></i> </a>
                             </div> <!-- fim .autor-caixa social -->
 
                         </article>
@@ -859,14 +859,15 @@
                             </h3>
 
                             <div class="team-social-share text-center clearfix">
-                                <a href="#" title="Facebook"> <i class="fa fa-instagram rectangle"></i> </a>
-                                <a href="#" title="Facebook"> <i class="fa fa-linkedin rectangle"></i> </a>
+                                <a href="https://www.instagram.com/mattheus.feliciano/    " title="Facebook"> <i class="fa fa-instagram rectangle"></i> </a>
+                                <a href="https://www.linkedin.com/in/matheus-feliciano-06242b277/" title="Facebook"> <i class="fa fa-linkedin rectangle"></i> </a>
 
 
 
                             </div> <!-- fim .autor-caixa social -->
 
 
+                            
                         </article>
 
 
@@ -1474,7 +1475,8 @@
                                     <p>
                                         Rua Vereador Creudo Rodriguês da Silva
                                         <br>
-                                        Centro, Toritama/PE
+                                        Centro, Toritama/PE <br> 
+                                        CEP: 55125-000
                                     </p>
                                 </div>
                             </div>
