--- a/fundacaomacedo/single-team.html
+++ b/fundacaomacedo/single-team.html
@@ -111,7 +111,8 @@
                                         <div class="text">
                                             <span class="head-heading">Nosso Endereço</span>
                                             <span class="head-content">
-                                                CENTRO, TORITAMA/PE
+                                                Rua Vereador Creudo Rodriguês da Silva
+                                                        Centro, Toritama/PE CEP: 55125-000
                                             </span>
                                         </div>
                                     </div><!-- end .repair-icon-box  -->
@@ -125,7 +126,7 @@
                                         <div class="text">
                                             <span class="head-heading"> HORÁRIO DE ABERTURA</span>
                                             <span class="head-content">
-                                                8h00 às 18h00
+                                                08h00 às 18h00
                                             </span>
                                         </div>
                                     </div><!-- fim .caixa de ícone de cabeçalho  -->
@@ -541,7 +542,7 @@
                                         <p>
                                             Rua Vereador Creudo Rodriguês da Silva
                                             <br>
-                                            Centro, Toritama/PE
+                                            Centro, Toritama/PE <br> CEP: 55125-000
                                         </p>   
                                     </div>
                                 </div>
